--- a/css/style.css
+++ b/css/style.css
@@ -33,6 +33,10 @@ span {
      color: #f9004d;
 }
 
+nav ul {
+    text-align: center;
+}
+
 nav ul li {
     list-style-type: none;
     display: inline-block;
@@ -55,7 +59,7 @@ nav ul li a:hover {
     background-color: #f9004d;
     color: white;
     padding: 10px 25px;
-    border-radius: 2px solid transparent;
+    border: 2px solid transparent;
     text-decoration: none;
     font-weight: bold;
     border-radius: 30px;
@@ -118,4 +122,71 @@ h4 {
     box-shadow: 0px 0px 5px #000, 0px 0px 15px #858585;
     top: 6px;
     right: 6px;
+}
+
+.about {
+    width: 100%;
+    padding: 100px 0px;
+    background-color: #191919;
+}
+
+.about img {
+    height: auto;
+    width: 30vw;
+}
+
+.about-text {
+    width: 600px;
+    margin-left: 5%;
+}
+
+.main {
+    width: 1130px;
+    max-width: 95%;
+    margin: 0 auto;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+}
+
+.about-text h2 {
+    color: white;
+    font-size: 5vw;
+    margin-bottom: 15px;
+    text-transform: capitalize;
+}
+
+.about-text h5 {
+    color: white;
+    letter-spacing: 2px;
+    font-size: 1.8vw;
+    margin-bottom: 15px;
+    text-transform: capitalize;
+}
+
+.about-text p {
+    color: white;
+    letter-spacing: 1px;
+    line-height: 2vw;
+    font-size: 1.4vw;
+    margin-bottom: 25px;
+}
+
+button {
+    background-color: #f9004d;
+    color: white;
+    padding: 13px 30px;
+    border: 2px solid transparent;
+    text-decoration: none;
+    font-weight: bold;
+    border-radius: 30px;
+    transition: transform 0.4s;
+    width: 130px;
+    margin-left: 37.5%;
+}
+
+button:hover {
+    background-color: transparent;
+    border: 2px solid #f9004d;
+    cursor: pointer;
 }
