--- a/css/style.css
+++ b/css/style.css
@@ -1,299 +1,512 @@
 *{
-    padding: 0;
     margin: 0;
+    padding: 0;
     font-family: 'Josefin Sans', sans-serif;
     box-sizing: border-box;
 }
 
-.top{
-    height: 100vh;
+body {
+    background: #080808;
+    color: #ffffff;
+}
+
+#header {
     width: 100%;
+    height: 100vh;
     background-image: url(../images/top.png);
     background-size: cover;
     background-position: center;
 }
 
+.container {
+    padding: 10px 10%;
+}
+
 nav {
     display: flex;
-    align-items: center;
     justify-content: space-between;
-    padding-top: 45px;
-    padding-left: 8%;
-    padding-right: 8%;
+    align-items: center;
+    flex-wrap: wrap;
+    padding: 20px 0;
 }
 
 .logo {
-    color: white;
-    font-size: 35px;
-    letter-spacing: 1px;
-    cursor: pointer;
-}
-
-span {
-     color: #f9004d;
-}
-
-nav ul {
-    text-align: center;
+    width: 200px;
 }
 
 nav ul li {
-    list-style-type: none;
     display: inline-block;
-    padding: 10px 25px;
+    list-style: none;
+    margin: 10px 20px;
 }
 
 nav ul li a {
-    color: white;
+    color: #ffffff;
     text-decoration: none;
+    font-size: 18px;
+    position: relative;
     font-weight: bold;
-    text-transform: capitalize;
 }
 
-nav ul li a:hover {
-    color: #f9004d;
-    transition: 0.4s;
-}
-
-.btn {
-    background-color: #f9004d;
-    color: white;
-    padding: 10px 25px;
-    border: 2px solid transparent;
-    text-decoration: none;
-    font-weight: bold;
-    border-radius: 30px;
-    transition: transform 0.4s;
-}
-
-.btn:hover {
-    transform: scale(1.2);
-}
-
-.content {
+nav ul li a::after {
+    content: ' ';
+    width: 0%;
+    height: 3px;
+    background: #ff004f;
     position: absolute;
-    top: 50%;
-    left: 8%;
-    transform: translateY(-50%);
+    left: 0;
+    bottom: -6px;
+    transition: 0.5s;
 }
 
-h1 {
-    color: white;
+nav ul li a:hover::after {
+    width: 100%;
+}
+
+.header-text {
+    margin-top: 25vh;
+    font-size: 30px;
+}
+
+.header-text h1 {
     font-size: 75px;
     margin: 20px 0px 20px;
 }
 
-h3 {
-    color: white;
-    font-size: 25px;
-    margin-bottom: 50px;
-}
-
-h4 {
-    color: #fcfcfc;
+.header-text h4 {
     letter-spacing: 2px;
     font-size: 20px;
 }
 
-.newslatter form{
-    width: 380px;
-    max-width: 100%;
+.header-text h3 {
+    font-size: 25px;
+}
+
+.header-text h1 span {
+    color: #ff004f;
+}
+
+/* Acerca de */
+
+#about {
+    padding: 80px 0 30px;
+    color: #ababab;
+}
+
+.row {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    line-height: 1.5;
+}
+
+.about-col-1 {
+    flex-basis: 35%;
+}
+
+.about-col-1 img {
+    width : 100%;
+    border-radius: 15px;
+    text-align: left;
+}
+
+.about-col-2 {
+    flex-basis: 60%;
+    font-size: 16px;
+}
+
+.subtitle {
+    font-size: 60px;
+    font-weight: 600;
+    color: #fff;
+    margin-bottom: 5px;
+}
+
+.tab-titles {
+    display: flex;
+    margin: 20px 0 20px;
+}
+
+.tab-links{
+    margin-right: 50px;
+    font-size: 16px;
+    font-weight: 500;
+    cursor: pointer;
     position: relative;
 }
 
-.newslatter form input:first-child{
-    display: inline-block;
-    width: 100%;
-    padding: 14px 110px 13px 15px;
-    border: 2px solid #f9004d;
-    outline: none;
-    border-radius: 30px;
-}
-
-.newslatter form input:last-child{
+.tab-links::after {
+    content: ' ';
+    width: 0%;
+    height: 3px;
+    background: #ff004f;
     position: absolute;
-    display: inline-block;
-    outline: none;
-    border: none;
-    padding: 10px 30px;
-    border-radius: 30px;
-    background-color: #f9004d;
-    color: white;
-    box-shadow: 0px 0px 5px #000, 0px 0px 15px #858585;
-    top: 6px;
-    right: 6px;
+    left: 0;
+    bottom: -8px;
+    transition: 0.5s;
 }
 
-.about {
-    width: 100%;
-    padding: 5vw 0px;
-    background-color: #191919;
+.tab-links.active-link::after {
+    width: 50%;
 }
 
-#pc-about {
-    height: auto;
-    width: 30vw;
+.tab-contents ul li {
+    list-style: none;
+    margin-top: 10px;
 }
 
-#phone-about {
+.tab-contents ul li span {
+    color: #b54769;
+}
+
+.tab-contents {
     display: none;
-    
+    font-size: 16px;
 }
 
-.about-text {
-    width: 600px;
-    margin-left: 5%;
+.tab-contents.active-tab {
+    display: block;
 }
 
-.main {
-    width: 1130px;
-    max-width: 95%;
-    margin: 0 auto;
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-}
-
-.about-text h2 {
-    color: white;
-    font-size: 5vw;
-    margin-bottom: 15px;
-    text-transform: capitalize;
-}
-
-.about-text h5 {
+.subsubtitle {
     color: white;
     letter-spacing: 2px;
-    font-size: 1.8vw;
+    font-size: 20px;
     margin-bottom: 15px;
     text-transform: capitalize;
 }
 
-.about-text p {
-    color: white;
-    letter-spacing: 1px;
-    line-height: 2vw;
-    font-size: 1.4vw;
-    margin-bottom: 25px;
+.subsubtitle span {
+    color: #ff004f;
 }
 
-button {
-    background-color: #f9004d;
-    color: white;
-    padding: 13px 30px;
-    border: 2px solid transparent;
-    text-decoration: none;
+/* Servicios */
+.services-list {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    grid-gap: 40px;
+    margin-top: 50px;
+    margin-bottom: 50px;
+}
+
+.services-list div {
+    background: #262626;
+    padding: 40px 40px 80px 40px;
+    font-size: 13px;
+    font-weight: 300;
+    border-radius: 10px;
+    transition: background 0.5s, transform 0.5s;
+    height: 100%;
+    position: relative;
+}
+
+.services-list div i {
+    font-size: 50px;
+    margin-bottom: 30px;
+}
+
+.services-list div h2 {
+    font-size: 25px;
+    font-weight: 500;
+    margin-bottom: 15px;
+}
+
+.services-list div a {
+    color: #ff004f;
+    font-size: 12px;
     font-weight: bold;
-    border-radius: 30px;
-    transition: transform 0.4s;
-    width: 130px;
-    margin-left: 37.5%;
+    position: absolute;
+    bottom: 12%;
+    transition: color 0.5s;
 }
 
-button:hover {
-    background-color: transparent;
-    border: 2px solid #f9004d;
+.services-list div:hover {
+    background: #ff004f;
+    transform: translateY(-10px);
+}
+
+.services-list div:hover a {
+    color: #fff;
+}
+
+/* Proyectos */
+.work-list {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    grid-gap: 40px;
+    margin-top: 50px;
+    margin-bottom: 50px;
+}
+
+.work {
+    border-radius: 10px;
+    position: relative;
+    overflow: hidden;
+}
+
+.work img {
+    width: 100%;
+    border-radius: 10px;
+    display: block;
+    transition: transform 0.5s;
+}
+
+.layer {
+    width: 100%;
+    height: 0%;
+    background: linear-gradient(rgba(0,0,0,0.6), #ff004f);
+    border-radius: 10px;
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    overflow: hidden;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    padding: 0 40px;
+    text-align: center;
+    font-size: 14px;
+    transition: height 0.5s;
+}
+
+.layer h3 {
+    font-weight: 650;
+    margin-bottom: 20px;
+}
+
+.layer a {
+    margin-top: 20px;
+    color: #ff004f;
+    text-decoration: none;
+    font-size: 18px;
+    line-height: 60px;
+    background: #ffffff;
+    width: 60px;
+    height: 60px;
+    border-radius: 50%;
+    text-align: center;
+}
+
+.work:hover img {
+    transform: scale(1.1);
+}
+
+.work:hover .layer {
+    height: 100%;
+}
+
+.btn {
+    display: block;
+    margin: 50px auto;
+    width: fit-content;
+    border: 1px solid #ff004f;
+    padding: 14px 50px;
+    border-radius: 6px;
+    color: #fff;
+    transition: background 0.5s;
+    text-decoration: none;
+}
+
+.btn:hover {
+    background: #ff004f;
+}
+
+/* Contacto */
+.contact-left {
+    flex-basis: 35%;
+}
+
+.contact-right {
+    flex-basis: 60%;
+}
+
+.contact-left p {
+    margin-top: 30px;
+}
+
+.contact-left p i {
+    color: #ff004f;
+    margin-right: 15px;
+    font-size: 25px;
+}
+
+.social-icons {
+    margin-top: 30px;
+}
+
+.social-icons a {
+    text-decoration: none;
+    font-size: 30px;
+    margin-right: 15px;
+    color: #ababab;
+    display: inline-block;
+    transition: color 0.5s, transform 0.5s;
+}
+
+.social-icons a:hover {
+    color: #ff004f;
+    transform: translateY(-5px);
+}
+
+.btn2 {
+    display: inline-block;
+    background: #ff004f;
+}
+
+.contact-right form {
+    width: 100%;
+}
+
+form input, form textarea {
+    width: 100%;
+    border: 0;
+    outline: none;
+    background: #262626;
+    padding: 15px;
+    margin: 15px;
+    color: #fff;
+    font-size: 18px;
+    border-radius: 6px;
+    resize: none;
+}
+
+form .btn2 {
+    padding: 14px 60px;
+    font-size: 18px;
+    margin-top: 20px;
     cursor: pointer;
+    margin-left: 15px;
 }
 
-@media screen and (max-width: 768px) {
-    .main {
-        flex-direction: column;
-        align-items: center;
-    }
+/* Footer */
+.copyright {
+    width: 100%;
+    text-align: center;
+    padding: 25px 0;
+    background: #262626;
+    font-weight: 300;
+    margin-top: 20px;
+}
 
-    .about-text {
-        width: 100%;
-        margin-left: 0;
-        margin-top: 1%;
-        text-align: center;
-    }
+/* Responsive */
+nav .fas {
+    display: none;
+}
 
-    .about img {
-        height: fit-content;
-    }
-
-    .about-text h2 {
-        text-align: center;
-        font-size: 8vw;
-    }
-
-    .about-text h5 {
-        font-size: 3.5vw;
-    }
-
-    .about-text p {
-        font-size: 3vw;
-        line-height: 4vw;
-    }
-
-    button {
-        margin-left: 0%;
-        padding: 16px 37px;
-        width: 160px;
-        font-size: 2.5vw;
-    }
-
-    #pc-about {
-        display: none;
-    }
-    
-    #phone-about {
-        height: auto;
-        width: 40vw;
-        display: inline;
-        margin-bottom: 15px;
-    }
-
-    .top{
+@media only screen and (max-width: 1200px) {
+    #header {
         background-image: url(../images/top2.png);
     }
 }
 
-@media screen and (max-width: 480px) {
-    nav ul {
-        display: none;
+@media only screen and (max-width: 1100px) {
+    .contact-left, .contact-right {
+        flex-basis: 100%;
+    }
+    
+    .contact-right {
+        margin-right: 30px;
+    }
+
+    #contact .row {
         text-align: center;
     }
+}
 
-    .newslatter form{
-        display: none;
+@media only screen and (max-width: 1025px) {
+    nav .fas {
+        display: block;
+        font-size: 30px;
     }
 
-    .top{
+    nav  ul {
+        background: #ff004f;
+        position: fixed;
+        top: 0;
+        right: -200px;
+        width: 200px;
+        height: 100vh;
+        padding-top: 50px;
+        z-index: 2;
+        transition: right 0.5s;
+    }
+
+    nav ul li { 
+        display: block;
+        margin: 25px;
+    }
+
+    nav ul .fas {
+        position: absolute;
+        top: 25px;
+        left: 25px;
+        cursor: pointer;
+    }
+}
+
+@media only screen and (max-width: 925px) {
+    .about-col-1, .about-col-2 {
+        flex-basis: 100%;
+    }
+
+    .about-col-1 {
+        margin-bottom: 30px;
+    }
+
+    .about-col-2 .subsubtitle, .subtitle {
+        text-align: center;
+    }
+}
+
+@media only screen and (max-width: 768px) {
+    .subtitle {
+        font-size: 40px;
+    }
+
+    .about-col-2 {
+        font-size: 14px;
+        text-align: left;
+    }
+
+    .tab-links {
+        font-size: 14px;
+        margin-right: 20px;
+    }
+
+    .tab-contents {
+        font-size: 14px;
+    }
+
+    .copyright {
+        font-size: 14px;
+    }
+
+    .logo {
+        width: 150px;
+    }
+}
+
+@media only screen and (max-width: 600px) {
+    #header {
         background-image: url(../images/top3.png);
     }
 }
 
-@media screen and (max-width: 480px) {
-    nav ul {
-        display: none;
-        text-align: center;
+@media only screen and (max-width: 380px) {
+    .subtitle {
+        font-size: 30px;
     }
 
-    .newslatter form{
-        display: none;
+    .subsubtitle {
+        font-size: 15px;
     }
 
-    .top{
-        background-image: url(../images/top3.png);
+    .tab-links {
+        margin-right: 17px;
     }
-}
 
-@media screen and (max-height: 600px) {
-    .newslatter form{
-        display: none;
-    }
-}
-
-@media screen and (max-height: 680px) and (max-width: 670px){
-    nav ul {
-        display: none;
-    }
-}
-
-@media screen and (max-height: 500px) {
-    nav{
-        display: none;
+    .contact-left p {
+        font-size: 14px;
     }
 }
