--- a/css/style.css
+++ b/css/style.css
@@ -443,7 +443,7 @@ nav .fas {
     }
 }
 
-@media only screen and (max-width: 1100px) {
+@media only screen and (max-width: 1150px) {
     .contact-left, .contact-right {
         flex-basis: 100%;
     }
@@ -458,6 +458,7 @@ nav .fas {
 
     #contacto .row, #cotizaciones .row{
         text-align: center;
+        margin-bottom: 20px;
     }
 }
 
