--- a/css/style.css
+++ b/css/style.css
@@ -123,6 +123,13 @@ nav ul li a:hover::after {
     font-size: 16px;
 }
 
+.subpage-subtitle {
+    font-size: 60px;
+    font-weight: 600;
+    color: #fff;
+    margin-bottom: 35px;
+}
+
 .subtitle {
     font-size: 60px;
     font-weight: 600;
@@ -192,7 +199,7 @@ nav ul li a:hover::after {
 /* Servicios */
 .services-list {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
     grid-gap: 40px;
     margin-top: 50px;
     margin-bottom: 50px;
@@ -241,7 +248,15 @@ nav ul li a:hover::after {
 /* Proyectos */
 .work-list {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+    grid-gap: 40px;
+    margin-top: 50px;
+    margin-bottom: 50px;
+}
+
+.work-list-main {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
     grid-gap: 40px;
     margin-top: 50px;
     margin-bottom: 50px;
@@ -423,23 +438,9 @@ form .btn2 {
     color: #fff;
 }
 
-.subpage-col-1 {
-    flex-basis: 50%;
-}
-
-.subpage-col-2 img {
-    width : 100%;
-    border-radius: 15px;
-    text-align: left;
-}
-
-.subpage-col-2 {
-    flex-basis: 45%;
-}
-
 .first-section-subpage {
     margin-top: 50px;
-    margin-bottom: 50px;
+    margin-bottom: 50px;    
 }
 
 .instructions {
@@ -488,8 +489,62 @@ form .btn2 {
     display: none;
 }
 
-.subpage-col-1 {
-    color: #aca8a8  ;
+.description {
+    margin-top: 35px;
+    color: #aca8a8;
+    line-height: 23px;
+}
+
+.small-description {
+    margin-top: 35px;
+    color: #aca8a8;
+    line-height: 23px;
+}
+
+.description img:first-child {
+    width: 40%;
+    float: right;
+    border-radius: 15px;
+    margin-left: 30px;
+}
+
+.small-description img:first-child{
+    width: 27%;
+    float: right;
+    border-radius: 15px;
+    margin-left: 60px;
+}
+
+.description img:last-child {
+    display: none;
+}
+
+.small-description img:last-child{
+    display: none;
+}
+
+.description li {
+    margin-top: 5px;
+    margin-left: 15px;
+}
+
+.small-description li{
+    margin-top: 5px;
+    margin-left: 15px;
+}
+
+.description:after{
+    content: "";
+    height: 0;
+    clear: both;
+    display: block; 
+}
+
+.small-description:after{
+    content: "";
+    height: 0;
+    clear: both;
+    display: block; 
 }
 
 /* Responsive */
@@ -559,6 +614,13 @@ nav .fas {
         margin-bottom: 30px;
     }
 
+    .about-col-1 img {
+        display: block;
+        width: 50%;
+        margin-left: auto;
+        margin-right: auto;
+    }
+
     .about-col-2 .subsubtitle, .subtitle {
         text-align: center;
     }
@@ -567,20 +629,21 @@ nav .fas {
         text-align: center;
     }
 
-    .subpage-col-1, .subpage-col-2 {
-        flex-basis: 100%;
-    }
-
-    .subpage-col-1 {
-        margin-bottom: 30px;
-    }
-
-    .subpage-col-1 p {
-        color: #ababab;
-    }
-
-    .subpage-col-1 .subtitle {
+    .subtitle {
         text-align: center;
+    }
+
+    .description img:first-child,  .small-description img:first-child {
+        display: none;
+    }
+
+    .description img:last-child, .small-description img:last-child {
+        display: block;
+        border-radius: 15px;
+        width: 50%;
+        margin-top: 15px;
+        margin-left: auto;
+        margin-right: auto;
     }
 
     .header-subpage {
@@ -631,6 +694,16 @@ nav .fas {
 
     .header-subpage i {
         font-size: 15px;
+    }
+
+    .description img:last-child, .small-description img:last-child {
+        width: 100%;
+    }
+
+    .about-col-1 img {
+        width: 70%;
+        margin-left: auto;
+        margin-right: auto;
     }
 }
 
