--- a/css/style.css
+++ b/css/style.css
@@ -550,12 +550,6 @@ nav .fas {
     display: none;
 }
 
-@media only screen and (max-width: 1200px) {
-    #inicio {
-        background-image: url(../images/top2.png);
-    }
-}
-
 @media only screen and (max-width: 1250px) {
     .contact-left, .contact-right {
         flex-basis: 100%;
@@ -569,7 +563,15 @@ nav .fas {
         text-align: center;
     }
 
-    
+    .contact-right {
+        text-align: center;
+    }
+}
+
+@media only screen and (max-width: 1200px) {
+    #inicio {
+        background-image: url(../images/top2.png);
+    }
 }
 
 @media only screen and (max-width: 1025px) {
